[package]
name = "midi_game"
version = "0.1.0"
authors = ["TanTanDev <tantangamedev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
macroquad = "0.3.1"
macroquad_tantan_toolbox = {path = "../macroquad_tantan_toolbox"}
async-trait = "0.1.48"